--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container">
-        <div class="row  justify-content-between">
+        <div class="row  justify-content-between align-items-center">
             <div class="col-auto">
                 <h1>START BOOTSTRAP</h1>
             </div>
@@ -21,7 +21,7 @@
     </header>
     <main class="container">
         <div class="row">
-            <div class="jumbotrone">
+            <div class="jumbotrone">                
 
             </div>
         </div>
@@ -62,6 +62,8 @@
         </div>
         <div class="row">
             <div class="about">
+                <h2>ABOUT</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
 
             </div>
         </div>
