added container fluid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid">
         <div class="row  justify-content-between align-items-center">
             <div class="col-auto">
                 <h1>START BOOTSTRAP</h1>
@@ -19,7 +19,7 @@
             </div>
         </div>
     </header>
-    <main class="container">
+    <main class="container-fluid">
         <div class="row">
             <div class="jumbotrone">                
 
@@ -78,7 +78,7 @@
             </div>
         </div>
     </main>
-    <footer class="container">
+    <footer class="container-fuid">
         <div class="row">
             <div class="copyright">
 
