--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </main>
-    <footer class="container-fuid">
+    <footer class="container-fluid">
         <div class="row">
             <div class="copyright">
 
