added some responsivness

--- a/index.html
+++ b/index.html
@@ -63,8 +63,14 @@
         <div class="row">
             <div class="about">
                 <h2>ABOUT</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
-
+                <div class="row flex-column align-content-center flex-md-row">
+                    <div class="col-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
+                    </div>
+                    <div class="col-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
