--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container-fluid">
-        <div class="row  justify-content-between align-items-center">
-            <div class="col-auto">
-                <h1>START BOOTSTRAP</h1>
+    <nav class="navbar navbar-expand-md navbar-light bg-dblue">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse flex-grow-0" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#">CONTACT</a>
             </div>
-            <div class="col-auto">
-                <img src="" alt="">
-            </div>
+          </div>
         </div>
-    </header>
+      </nav>
     <main class="container-fluid">
         <div class="row">
             <div class="jumbotrone">                
