--- a/index.html
+++ b/index.html
@@ -27,49 +27,49 @@
       </nav>
     <main class="container-fluid text-center">
         <div class="row">
-            <div class="jumbotrone">                
+            <div class="jumbotrone py-5">                
                 <img src="./img/avatar.svg" alt="">
                 <h1>START BOOTSTRAP</h1>
                 <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
             </div>
         </div>
-        <div class="row picture">
-            <div class="portfolio">
+        <div class="row picture py-5 px-md-5">
+            <div class="portfolio py-5">
                 <h2>PORTFOLIO</h2>
             </div>
-            <div class="col-12 col-md-6 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-md-6 col-lg-4">
                 <div class="picture1">
                     <img src="./img/cabin.png" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-lg-4">
                 <div class="picture2">
                     <img src="./img/cake.png" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-lg-4">
                 <div class="picture3">
                     <img src="./img/circus.png" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-lg-4">
                 <div class="picture4">
                     <img src="./img/game.png" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-lg-4">
                 <div class="picture5">
                     <img src="./img/safe.png" alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="py-3 col-12 col-md-6 col-lg-4">
                 <div class="picture6">
                     <img src="./img/submarine.png" alt="">
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="about">
+            <div class="about py-5">
                 <h2>ABOUT</h2>
                 <div class="row flex-column align-content-center flex-md-row">
                     <div class="col-6">
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="contactme">
+            <div class="contactme py-5">
                 <h2>CONTACT ME</h2>
                 <form class="text-start">
                     <div class="mb-3">
@@ -106,7 +106,7 @@
                   </form>
             </div>
         </div>
-        <div class="row contacts">
+        <div class="row contacts py-5">
             <div class="col-12 col-md-4">
                 <h3>LOCATION</h3>
                 <SPAN>2215 John Daniel Drive Clark, MO 54243</SPAN>
