--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </nav>
-    <main class="container-fluid text-center">
+    <main class="container-fluid text-center txt-color-white">
         <div class="row">
             <div class="jumbotrone py-5">                
                 <img src="./img/avatar.svg" alt="">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row picture py-5 px-md-5">
-            <div class="portfolio py-5">
+            <div class="portfolio py-5 txt-color-dblue">
                 <h2>PORTFOLIO</h2>
             </div>
             <div class="py-3 col-12 col-md-6 col-md-6 col-lg-4">
@@ -71,11 +71,11 @@
         <div class="row">
             <div class="about py-5">
                 <h2>ABOUT</h2>
-                <div class="row flex-column align-content-center flex-md-row">
-                    <div class="col-6">
+                <div class="row flex-column align-content-center flex-md-row justify-content-center text-start">
+                    <div class="col-4 col-lg-3">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4 col-lg-3">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
                     </div>
                 </div>
@@ -83,27 +83,31 @@
             </div>
         </div>
         <div class="row">
-            <div class="contactme py-5">
-                <h2>CONTACT ME</h2>
-                <form class="text-start">
-                    <div class="mb-3">
-                      <label for="name" class="form-label">Name</label>
-                      <input type="text" class="form-control" id="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email Address</label>
-                        <input type="email" class="form-control" id="email">
-                      </div>
-                      <div class="mb-3">
-                        <label for="tel" class="form-label">Phone Number</label>
-                        <input type="tel" class="form-control" id="tel">
-                      </div>
-                      <div class="form-floating">
-                        <textarea class="form-control" style="height: 200px" placeholder="Leave a comment here" id="message"></textarea>
-                        <label for="message">Message</label>
-                      </div>
-                    <button type="submit" class="btn bg-green">Send</button>
-                  </form>
+            <div class="contactme txt-color-dblue py-5 d-flex flex-wrap justify-content-center">
+                <div class="col-12 txt-color-dblue">
+                    <h2>CONTACT ME</h2>
+                </div>
+                <div class="col-6">
+                    <form class="text-start">
+                        <div class="mb-3">
+                          <label for="name" class="form-label">Name</label>
+                          <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="email">
+                          </div>
+                          <div class="mb-3">
+                            <label for="tel" class="form-label">Phone Number</label>
+                            <input type="tel" class="form-control" id="tel">
+                          </div>
+                          <div class="form-floating">
+                            <textarea class="form-control" style="height: 200px" placeholder="Leave a comment here" id="message"></textarea>
+                            <label for="message">Message</label>
+                          </div>
+                        <button type="submit" class="btn bg-green mt-2">Send</button>
+                      </form>
+                </div>
             </div>
         </div>
         <div class="row contacts py-5">
@@ -120,11 +124,11 @@
             </div>
             <div class="col-12 col-md-4">
                 <h3>ABOUT FREELANCER</h3>
-                <span>Freelance is a free to use, open source Bootstrap theme created by span <a href="">Start Bootstrap</a></span>
+                <span>Freelance is a free to use, open source Bootstrap theme created by span <a class="txt-color-green text-decoration-none" href="">Start Bootstrap</a></span>
             </div>
         </div>
     </main>
-    <footer class="container-fluid text-center">
+    <footer class="container-fluid txt-color-white text-center">
         <div class="row copyright align-items-center">
             <div class="col-12">
                 <span>Copyright Your Website 2021</span>
