--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <div class="about py-5">
                 <h2>ABOUT</h2>
                 <div class="row flex-column align-content-center flex-md-row justify-content-center text-start">
-                    <div class="col-4 col-lg-3">
+                    <div class="col-8 col-md-4 col-lg-3">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
                     </div>
-                    <div class="col-4 col-lg-3">
+                    <div class="col-8 col-md-4 col-lg-3">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
                     </div>
                 </div>
