--- a/index.html
+++ b/index.html
@@ -30,12 +30,34 @@
             <div class="jumbotrone py-5">                
                 <img src="./img/avatar.svg" alt="">
                 <h1>START BOOTSTRAP</h1>
+                <div class="star d-flex justify-content-center align-items-center">
+                    <div class="col-1">
+                        <div class="hr"></div>
+                    </div>
+                    <div class="col-1">
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                    <div class="col-1">
+                        <div class="hr"></div>
+                    </div>
+                </div>
                 <span>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
             </div>
         </div>
         <div class="row picture py-5 px-md-5">
             <div class="portfolio py-5 txt-color-dblue">
                 <h2>PORTFOLIO</h2>
+                <div class="star d-flex justify-content-center align-items-center">
+                    <div class="col-1">
+                        <div class="hr bg-dblue"></div>
+                    </div>
+                    <div class="col-1">
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                    <div class="col-1">
+                        <div class="hr bg-dblue"></div>
+                    </div>
+                </div>
             </div>
             <div class="py-3 col-12 col-md-6 col-md-6 col-lg-4">
                 <div class="picture1">
@@ -69,14 +91,28 @@
             </div>
         </div>
         <div class="row">
-            <div class="about py-5">
+            <div class="about py-5 fs-5">
                 <h2>ABOUT</h2>
+                <div class="row">
+
+                </div>
+                <div class="star d-flex justify-content-center align-items-center">
+                    <div class="col-1">
+                        <div class="hr"></div>
+                    </div>
+                    <div class="col-1">
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                    <div class="col-1">
+                        <div class="hr"></div>
+                    </div>
+                </div>
                 <div class="row flex-column align-content-center flex-md-row justify-content-center text-start">
                     <div class="col-8 col-md-4 col-lg-3">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easycustomization.</p>
                     </div>
                     <div class="col-8 col-md-4 col-lg-3">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolore sequi consequatur maxime id iure ducimus, veritatis neque temporibus, dolores quasi quo nulla, commodi ab tempora labore exercitationem. Nihil, ipsam!</p>
+                        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-light">Download</button>
@@ -86,44 +122,55 @@
             <div class="contactme txt-color-dblue py-5 d-flex flex-wrap justify-content-center">
                 <div class="col-12 txt-color-dblue">
                     <h2>CONTACT ME</h2>
+                    <div class="star d-flex justify-content-center align-items-center">
+                        <div class="col-1">
+                            <div class="hr bg-dblue"></div>
+                        </div>
+                        <div class="col-1">
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                        <div class="col-1">
+                            <div class="hr bg-dblue"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-6">
                     <form class="text-start">
                         <div class="mb-3">
-                          <label for="name" class="form-label">Name</label>
+                          <label for="name" class="form-label"><h4>Name</h4></label>
                           <input type="text" class="form-control" id="name">
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email Address</label>
+                            <label for="email" class="form-label"><h4>Email Address</h4></label>
                             <input type="email" class="form-control" id="email">
                           </div>
                           <div class="mb-3">
-                            <label for="tel" class="form-label">Phone Number</label>
+                            <label for="tel" class="form-label"><h4>Phone Number</h4></label>
                             <input type="tel" class="form-control" id="tel">
                           </div>
                           <div class="form-floating">
                             <textarea class="form-control" style="height: 200px" placeholder="Leave a comment here" id="message"></textarea>
-                            <label for="message">Message</label>
+                            <label for="message"><h4>Message</h4></label>
                           </div>
-                        <button type="submit" class="btn bg-green mt-2">Send</button>
+                        <button type="submit" class="btn bg-green mt-2 txt-color-white">Send</button>
                       </form>
                 </div>
             </div>
         </div>
         <div class="row contacts py-5">
-            <div class="col-12 col-md-4">
-                <h3>LOCATION</h3>
+            <div class="col-12 col-md-4 py-3">
+                <h5>LOCATION</h5>
                 <SPAN>2215 John Daniel Drive Clark, MO 54243</SPAN>
             </div>
-            <div class="col-12 col-md-4">
-                <h3>AROUND THE WEB</h3>
+            <div class="col-12 col-md-4 py-4">
+                <h5>AROUND THE WEB</h5>
                 <i class="bi bi-facebook"></i>
                 <i class="bi bi-google"></i>
                 <i class="bi bi-twitter"></i>
                 <i class="bi bi-linkedin"></i>
             </div>
-            <div class="col-12 col-md-4">
-                <h3>ABOUT FREELANCER</h3>
+            <div class="col-12 col-md-4 py-4">
+                <h5>ABOUT FREELANCER</h5>
                 <span>Freelance is a free to use, open source Bootstrap theme created by span <a class="txt-color-green text-decoration-none" href="">Start Bootstrap</a></span>
             </div>
         </div>
