--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dblue">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dblue">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">START BOOTSTRAP</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -171,7 +171,7 @@
             </div>
             <div class="col-12 col-md-4 py-4">
                 <h5>ABOUT FREELANCER</h5>
-                <span>Freelance is a free to use, open source Bootstrap theme created by span <a class="txt-color-green text-decoration-none" href="">Start Bootstrap</a></span>
+                <span>Freelance is a free to use, open source Bootstrap theme created by <a class="txt-color-green text-decoration-none" href="">Start Bootstrap</a></span>
             </div>
         </div>
     </main>
